plugins/binding/rust/source/TellusimRSBase.rs


impl Slice {
	pub fn new_f(f: &Face) -> Slice {
		Slice { face: f.base, faces: f.size, layer: 0, layers: 1, mipmap: 0, mipmaps: 1 }
	}
	pub fn new_l(l: &Layer) -> Slice {
		Slice { face: 0, faces: 1, layer: l.base, layers: l.size, mipmap: 0, mipmaps: 1 }
	}
	pub fn new_m(m: &Mipmap) -> Slice {
		Slice { face: 0, faces: 1, layer: 0, layers: 1, mipmap: m.base, mipmaps: m.size }
	}
	pub fn new_lf(l: &Layer, f: &Face) -> Slice {
		Slice { face: f.base, faces: f.size, layer: l.base, layers: l.size, mipmap: 0, mipmaps: 1 }
	}
	pub fn new_fm(f: &Face, m: &Mipmap) -> Slice {
		Slice { face: f.base, faces: f.size, layer: 0, layers: 1, mipmap: m.base, mipmaps: m.size }
	}
	pub fn new_lm(l: &Layer, m: &Mipmap) -> Slice {
		Slice { face: 0, faces: 1, layer: l.base, layers: l.size, mipmap: m.base, mipmaps: m.size }
	}
	pub fn new_lfm(l: &Layer, f: &Face, m: &Mipmap) -> Slice {
		Slice { face: f.base, faces: f.size, layer: l.base, layers: l.size, mipmap: m.base, mipmaps: m.size }
	}
	pub fn new(face: u32, layer: u32, mipmap: u32) -> Slice {
		Slice { face: face, faces: 1, layer: layer, layers: 1, mipmap: mipmap, mipmaps: 1 }
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Viewport {
	pub x: f32,
	pub y: f32,
	pub width: f32,
	pub height: f32,
	pub znear: f32,
	pub zfar: f32,
}

impl Default for Viewport {
	fn default() -> Viewport {
		Viewport { x: 0.0, y: 0.0, width: 1.0, height: 1.0, znear: 0.0, zfar: 1.0 }
	}
}

impl Viewport {
	pub fn new_wh(width: f32, height: f32) -> Viewport {
		Viewport { x: 0.0, y: 0.0, width: width, height: height, znear: 0.0, zfar: 1.0 }
	}
	pub fn new_xywh(x: f32, y: f32, width: f32, height: f32) -> Viewport {
		Viewport { x: x, y: y, width: width, height: height, znear: 0.0, zfar: 1.0 }
	}
	pub fn new(x: f32, y: f32, width: f32, height: f32, znear: f32, zfar: f32) -> Viewport {
		Viewport { x: x, y: y, width: width, height: height, znear: znear, zfar: zfar }
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Scissor {
	pub x: i32,
	pub y: i32,
	pub width: i32,
	pub height: i32,
}

impl Default for Scissor {
	fn default() -> Scissor {
		Scissor { x: 0, y: 0, width: MAXI16 as i32, height: MAXI16 as i32 }
	}
}

impl Scissor {
	pub fn new_wh(width: i32, height: i32) -> Scissor {
		Scissor { x: 0, y: 0, width: width, height: height }
	}
	pub fn new(x: i32, y: i32, width: i32, height: i32) -> Scissor {
		Scissor { x: x, y: y, width: width, height: height }
	}
}

/*
 */
impl Command {
	pub fn set_uniform<Type>(&mut self, index: u32, data: &Type) {
		Command::set_uniform_data(self, index, data as *const _ as *const c_void, mem::size_of::<Type>())
	}
	pub fn set_uniform_array<Type>(&mut self, index: u32, data: &[Type]) {
		Command::set_uniform_data(self, index, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
	pub fn set_uniform_vec<Type>(&mut self, index: u32, data: &Vec<Type>) {
		Command::set_uniform_data(self, index, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
	pub fn set_storage<Type>(&mut self, index: u32, data: &Type) {
		Command::set_storage_data(self, index, data as *const _ as *const c_void, mem::size_of::<Type>())
	}
	pub fn set_storage_array<Type>(&mut self, index: u32, data: &[Type]) {
		Command::set_storage_data(self, index, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
	pub fn set_storage_vec<Type>(&mut self, index: u32, data: &Vec<Type>) {
		Command::set_storage_data(self, index, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
	pub fn set_vertices<Type>(&mut self, index: u32, data: &[Type]) {
		Command::set_vertex_data(self, index, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
	pub fn set_indices<Type>(&mut self, data: &[Type]) {
		let format = match mem::size_of::<Type>() {
			1 => Format::Ru8,
			2 => Format::Ru16,
			4 => Format::Ru32,
			_ => Format::Unknown,
		};
		Command::set_index_data(self, format, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
	pub fn set_indirect<Type>(&mut self, data: &Type) {
		Command::set_indirect_data(self, data as *const _ as *const c_void, mem::size_of::<Type>())
	}
	pub fn set_indirect_array<Type>(&mut self, data: &[Type]) {
		Command::set_indirect_data(self, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
}

/*
 */
impl Compute {
	pub fn set_uniform<Type>(&mut self, index: u32, data: &Type) {
		Compute::set_uniform_data(self, index, data as *const _ as *const c_void, mem::size_of::<Type>())
	}
	pub fn set_uniform_array<Type>(&mut self, index: u32, data: &[Type]) {
		Compute::set_uniform_data(self, index, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
	pub fn set_uniform_vec<Type>(&mut self, index: u32, data: &Vec<Type>) {
		Compute::set_uniform_data(self, index, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
	pub fn set_storage<Type>(&mut self, index: u32, data: &Type) {
		Compute::set_storage_data(self, index, data as *const _ as *const c_void, mem::size_of::<Type>())
	}
	pub fn set_storage_array<Type>(&mut self, index: u32, data: &[Type]) {
		Compute::set_storage_data(self, index, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
	pub fn set_storage_vec<Type>(&mut self, index: u32, data: &Vec<Type>) {
		Compute::set_storage_data(self, index, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
	pub fn set_indirect<Type>(&mut self, data: &Type) {
		Compute::set_indirect_data(self, data as *const _ as *const c_void, mem::size_of::<Type>())
	}
	pub fn set_indirect_array<Type>(&mut self, data: &[Type]) {
		Compute::set_indirect_data(self, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
}

/*
 */
impl Device {
	pub fn create_buffer_with_flags_array<Type>(&self, flags: BufferFlags, data: &[Type]) -> Buffer {
		DeviceTrait::create_buffer_with_flags_src(self, flags, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
	pub fn create_buffer_with_flags_vec<Type>(&self, flags: BufferFlags, data: &Vec<Type>) -> Buffer {
		DeviceTrait::create_buffer_with_flags_src(self, flags, data.as_ptr() as *const c_void, mem::size_of::<Type>() * data.len())
	}
}

/*****************************************************************************\
 *
 * Interface
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Rect {
	pub left: f32,
	pub right: f32,
	pub bottom: f32,
	pub top: f32,
}

impl Rect {
	
	pub fn new() -> Rect {
		Rect { left: MAXF32, right: -MAXF32, bottom: MAXF32, top: -MAXF32 }
	}
	pub fn new_v(value: f32) -> Rect {
		Rect { left: value, right: value, bottom: value, top: value }
	}
	pub fn new_hv(horizontal: f32, vertical: f32) -> Rect {
		Rect { left: horizontal, right: horizontal, bottom: vertical, top: vertical }
	}
	pub fn new_lrbt(left: f32, right: f32, bottom: f32, top: f32) -> Rect {
		Rect { left: left, right: right, bottom: bottom, top: top }
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct FontStyle {
	pub size: u32,
	pub scale: u32,
	pub fixed: bool,
	pub kerning: bool,
	pub spacing: Vector2f,
	pub color: Color,
	pub offset: Vector3f,
	pub shadow: Color,
}

impl FontStyle {
	
	pub fn new() -> FontStyle {
		FontStyle { size: 16, scale: 100, fixed: false, kerning: true, spacing: Vector2f::zero(), color: Color::white(), offset: Vector3f::zero(), shadow: Color::black() }
	}
	pub fn new_with_size(size: u32) -> FontStyle {
		FontStyle { size: size, scale: 100, fixed: false, kerning: true, spacing: Vector2f::zero(), color: Color::white(), offset: Vector3f::zero(), shadow: Color::black() }
	}
	pub fn new_with_color(color: Color) -> FontStyle {
		FontStyle { size: 16, scale: 100, fixed: false, kerning: true, spacing: Vector2f::zero(), color: color, offset: Vector3f::zero(), shadow: Color::black() }
	}
	pub fn new_with_size_color(size: u32, color: Color) -> FontStyle {
		FontStyle { size: size, scale: 100, fixed: false, kerning: true, spacing: Vector2f::zero(), color: color, offset: Vector3f::zero(), shadow: Color::black() }
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct StrokeStyle {
	pub width: f32,
	pub offset: f32,
	pub color: Color,
}

impl StrokeStyle {
	
	pub fn new_with_width(width: f32) -> StrokeStyle {
		StrokeStyle { width: width, offset: 0.0, color: Color::white() }
	}
	pub fn new_with_color(color: Color) -> StrokeStyle {
		StrokeStyle { width: 0.0, offset: 0.0, color: color }
	}
	pub fn new_with_width_offset(width: f32, offset: f32) -> StrokeStyle {
		StrokeStyle { width: width, offset: offset, color: Color::white() }
	}
	pub fn new_with_width_color(width: f32, color: Color) -> StrokeStyle {
		StrokeStyle { width: width, offset: 0.0, color: color }
	}
	pub fn new_with_width_offset_color(width: f32, offset: f32, color: Color) -> StrokeStyle {
		StrokeStyle { width: width, offset: offset, color: color }
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct GradientStyle {
	pub radius: f32,
	pub length: f32,
	pub center: Vector2f,
	pub axis: Vector2f,
	pub color_0: Color,
	pub color_1: Color,
}

impl GradientStyle {
	
	pub fn new_with_colors(c0: Color, c1: Color) -> GradientStyle {
		GradientStyle { radius: 0.0, length: 0.0, center: Vector2f::zero(), axis: Vector2f::zero(), color_0: c0, color_1: c1 }
	}
	pub fn new_with_radius_color(radius: f32, center: Vector2f) -> GradientStyle {
		GradientStyle { radius: radius, length: 0.0, center: center, axis: Vector2f::zero(), color_0: Color::white(), color_1: Color::white() }
	}
	pub fn new_with_length_center_axis(length: f32, center: Vector2f, axis: Vector2f) -> GradientStyle {
		GradientStyle { radius: 0.0, length: length, center: center, axis: axis, color_0: Color::white(), color_1: Color::white() }
	}
	pub fn new_with_radius_center_colors(radius: f32, center: Vector2f, c0: Color, c1: Color) -> GradientStyle {
		GradientStyle { radius: radius, length: 0.0, center: center, axis: Vector2f::zero(), color_0: c0, color_1: c1 }
	}
	pub fn new_with_length_center_axis_colors(length: f32, center: Vector2f, axis: Vector2f, c0: Color, c1: Color) -> GradientStyle {
		GradientStyle { radius: 0.0, length: length, center: center, axis: axis, color_0: c0, color_1: c1 }
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct CanvasVertex {
	pub position: Vector3f,
	pub texcoord: Vector2f,
	pub color: u32,
}

#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct CanvasShapeVertex {
	pub position: Vector4f,
	pub parameters: Vector4f,
	pub texcoord: Vector2f,
	pub padding: Vector2u,
}

#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct CanvasStripVertex {
	pub position: Vector4f,
	pub parameters: Vector4f,
	pub adjacencies: Vector4f,
}

/*****************************************************************************\
 *
 * Parallel
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Tensor {
	pub buffer: *mut c_void,
	pub format: Format,
	pub offset: usize,
	pub axis: u32,
	pub kernel: u32,
	pub stride: u32,
	pub padding: u32,
	pub dilation: u32,
	pub scale: f32,
	pub bias: f32,
	pub width: u32,
	pub height: u32,
	pub depth: u32,
	pub layers: u32,
}

/*
 */
impl Tensor {
